--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,10 @@
 @media (min-width: 1000px) {
   /* 헤더  */
   header {
+    overflow: hidden;
+  }
+
+  header .pc {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -14,27 +18,87 @@
     z-index: 5;
   }
 
-  header ul {
+  header .pc ul {
     display: flex;
     gap: 20px;
     align-items: center;
     font-size: 18px;
     font-family: "Freesentation-9Black";
   }
-  header h1 {
+  header .pc h1 {
     width: 70px;
     height: 70px;
   }
-  header h1 img {
+  header .pc h1 img {
     width: 100%;
     height: 100%;
   }
-  header .down i {
+  header .pc .down i {
     font-size: 13px;
     margin-left: 10px;
   }
+
+  header .menu_wrap {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  header .menu_wrap > ul {
+    width: 100%;
+    height: 100%;
+    padding: 300px 0px;
+    box-sizing: border-box;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    font-family: "Freesentation-9Black";
+    color: var(--color);
+    position: absolute;
+    top: 0;
+    right: -100%;
+    z-index: 11;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  header .menu_wrap > ul > li {
+    width: calc(100% / 5 - 30px);
+  }
+
+  header .menu_wrap > ul > li > a {
+    font-size: 30px;
+  }
+
+  header .menu_wrap .sub_menu {
+    font-size: 20px;
+    line-height: 30px;
+    margin-top: 20px;
+    font-family: "Freesentation-8ExtraBold";
+  }
+
+  header .menu_wrap .close {
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    padding: 25px;
+    color: var(--color);
+  }
+  header .menu_wrap .sub_menu li:hover {
+    text-decoration: underline;
+  }
   header .mobile {
     display: none;
+  }
+
+  header.on .pc {
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(111, 115, 119, 0.2) 0px 8px 24px;
   }
   /* 비쥬얼 */
   .visual {
@@ -81,7 +145,7 @@
     object-fit: cover;
     position: absolute;
     top: 0;
-    z-index: 10;
+    z-index: 8;
   }
 
   /* con1 */
@@ -559,6 +623,10 @@
 @media (min-width: 700px) and (max-width: 1000px) {
   /* 헤더  */
   header {
+    overflow: hidden;
+  }
+
+  header .pc {
     width: 100%;
     display: flex;
     justify-content: space-between;
@@ -571,27 +639,87 @@
     z-index: 5;
   }
 
-  header ul {
+  header .pc ul {
     display: flex;
     gap: 20px;
     align-items: center;
     font-size: 18px;
     font-family: "Freesentation-9Black";
   }
-  header h1 {
+  header .pc h1 {
     width: 70px;
     height: 70px;
   }
-  header h1 img {
+  header .pc h1 img {
     width: 100%;
     height: 100%;
   }
-  header .down i {
+  header .pc .down i {
     font-size: 13px;
     margin-left: 10px;
   }
+
+  header .menu_wrap {
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    right: -100%;
+    overflow: hidden;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+
+  header .menu_wrap > ul {
+    width: 100%;
+    height: 100%;
+    padding: 300px 0px;
+    box-sizing: border-box;
+    display: flex;
+    gap: 30px;
+    justify-content: center;
+    font-family: "Freesentation-9Black";
+    color: var(--color);
+    position: absolute;
+    top: 0;
+    right: -100%;
+    z-index: 11;
+    text-align: center;
+    background-color: rgba(255, 255, 255, 0.8);
+  }
+  header .menu_wrap > ul > li {
+    width: calc(100% / 5 - 30px);
+  }
+
+  header .menu_wrap > ul > li > a {
+    font-size: 17px;
+  }
+
+  header .menu_wrap .sub_menu {
+    font-size: 15px;
+    line-height: 30px;
+    margin-top: 20px;
+    font-family: "Freesentation-8ExtraBold";
+  }
+
+  header .menu_wrap .close {
+    position: absolute;
+    z-index: 11;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    padding: 25px;
+    color: var(--color);
+  }
+  header .menu_wrap .sub_menu li:hover {
+    text-decoration: underline;
+  }
   header .mobile {
     display: none;
+  }
+
+  header.on .pc {
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: rgba(111, 115, 119, 0.2) 0px 8px 24px;
   }
   /* 비쥬얼 */
   .visual {
